package net.proselyte.basepatterns.behavioral.template;

public class NewsPage {
}
