package net.proselyte.basepatterns.behavioral.template;

public class WebsiteRunner {
    public static void main(String[] args) {


        System.out.println("\n================================\n");

    }
}
